<resources>
    <string name="app_name">Supermarket Comparator</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="title_activity_main">Home</string>
    <string name="productos_mercadona">Productos Mercadona</string>
    <string name="productos_dia">Productos Dia</string>
    <string name="productos_carrefour">Productos Carrefour</string>
    <string name="productos_alcampo">Productos Alcampo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_cart">Carrito De Compra</string>
    <string name="tab_text_1">Mercadona</string>
    <string name="tab_text_2">Carrefour</string>
    <string name="tab_text_3">Dia</string>
    <string name="tab_text_4">Alcampo</string>
    <string name="nav_header_desc">Navigation header</string>


    <!-- Strings settings-->
    <string name="pref_header_about">About</string>
    <string name="summary_about">We are a team of like-minded people, specialized in development of Android App Development creating new trends across the Spain Supermarkets app space. Glad to Help in anyway!</string>
    <string name="app_version">0.95.9 (beta)</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://supermarketcomparator.000webhostapp.com/htmls/faq.html</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://supermarketcomparator.000webhostapp.com/htmls/privacypolicy.html</string>
    <string name="title_terms">Terms And Conditions</string>
    <string name="url_terms">https://supermarketcomparator.000webhostapp.com/htmls/termsandconditions.html</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="title_gallery_storage">Default Storage</string>
    <string name="title_new_notification_sound">New message notification</string>
    <string name="title_vibrate">Vibrate</string>
    <string name="summary_vibrate">Vibrate on new notification</string>
    <string name="notifications_new_message">notifications_new_message</string>
    <string name="key_notifications_new_message_ringtone">key_notifications_new_message_ringtone</string>
    <string name="title_activity_settings">Settings</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="dark_mode_enabled">Dark Mode Enabled</string>
    <string name="dark_mode_disabled">Enable Dark Mode to save battery.</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>