<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory app:title="General">
        <SwitchPreferenceCompat
            app:key="Dark Mode"
            app:summaryOff="@string/dark_mode_disabled"
            app:summaryOn="@string/dark_mode_enabled"
            app:title="Dark mode" />
    </PreferenceCategory>
    <PreferenceCategory app:title="@string/messages_header">
        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="sync"
            app:title="@string/sync_title" />

        <SwitchPreferenceCompat
            app:dependency="sync"
            app:key="attachment"
            app:summaryOff="@string/attachment_summary_off"
            app:summaryOn="@string/attachment_summary_on"
            app:title="@string/attachment_title" />

    </PreferenceCategory>
    <PreferenceCategory app:title="@string/pref_header_about">

        <Preference
            app:selectable="false"
            app:summary="@string/summary_about" />

        <Preference
            app:key="@string/title_version"
            app:summary="@string/app_version"
            app:title="@string/title_version" />

        <Preference
            app:key="@string/key_send_feedback"
            app:summary="@string/summary_support"
            app:title="@string/title_send_feedback" />

        <!-- preference opens url in browser -->
        <Preference
            app:key="@string/title_faq"
            app:summary="@string/summary_faq"
            app:title="@string/title_faq">
        </Preference>

        <Preference app:key="@string/privacy_policy"
            app:title="@string/privacy_policy">

        </Preference>

        <Preference app:key="@string/title_terms"
            app:title="@string/title_terms">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>