<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Operaciones">
        <menu>
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/abc_vector_test"
                android:title="@string/menu_home" />
            <item
                android:id="@+id/nav_mercadona"
                android:icon="@android:drawable/ic_menu_search"
                android:title="@string/productos_mercadona" />
            <item
                android:id="@+id/nav_dia"
                android:icon="@android:drawable/ic_menu_search"
                android:title="@string/productos_dia" />
            <item
                android:id="@+id/nav_alcampo"
                android:icon="@android:drawable/ic_menu_search"
                android:title="@string/productos_alcampo" />
            <item
                android:id="@+id/nav_carrefour"
                android:icon="@android:drawable/ic_menu_search"
                android:title="@string/productos_carrefour" />
        </menu>
    </item>
    <item android:title="Account">
        <menu>
            <item
                android:id="@+id/nav_account"
                android:icon="@drawable/ic_round_person_24"
                android:title="Account Settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_delete"
                android:title="Log out" />
        </menu>
    </item>
</menu>